<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Attributions">

    <LinearLayout
            android:divider="?android:attr/listDivider"
            android:showDividers="middle"
            android:orientation="vertical"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">
        <TextView
                android:text="@string/attributions_chrome_extension"
                android:textIsSelectable="true"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/attributions_nook_extension"
                android:textIsSelectable="true"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/attributions_nintendo"
                android:textIsSelectable="true"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/attributions_commission"
                android:textIsSelectable="true"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/attributions_contact"
                android:textIsSelectable="true"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
            android:text='"My axe is hot to play, so cop a chair, Claire."'
            android:textStyle="italic"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>